2008-02-22  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (OPTIONAL EXTERNAL FILES::manualpage.1.pod):
	Rename. Was manualpage.pod. Explain basics of manual page
	sections.

	* bin/cygbuild.sh:
	(CygbuildBootVariablesGlobalMain) Add *.{rej,bak,tmp} to
	CYGBUILD_INSTALL_IGNORE.
	(CygbuildInstallPackageDocs): Comment out
	pattern match code and use solely CYGBUILD_INSTALL_IGNORE.
	files.
	(CygbuildInstallFixDocdirInstall): Protect regexp with
	`CygbuildStrToRegexpSafe'.
	(CygbuildInstallFixDocdirInstall): Add --test mode support.
	(CygbuildCmdFilesWrite): Add unpack support for template files.
	E.g. install cygwin-announce.mail.tmp as cygwin-announce.mail.
	(CygbuildInstallFixDocdirInstall): Return of nothing to do.
	(CygbuildInstallExtraMain): Add `CygbuildMakeRunInstallFixPerlManpage'.
	(CygbuildPerlLibraryDepends): New.
	(CygbuildPerlLibraryList): New.
	(CygbuildCmdInstallCheckPerlLibraries): New.
	(CygbuildCmdInstallCheckBinFiles): Use
	`CygbuildCmdInstallCheckPerlLibraries'.
	(CygbuildCmdDownloadCygwinPackage): Rename. Was
	`CygbuildCmdGetSource'. Download binary package too.
	(CygbuildCommandMain): Add option --dir to command 'cygsrc'.
	(CygbuildCommandMainCheckSpecial): Renamed. Was
	`CygbuildCommandMainCheckHelp'.
	(CygbuildCmdDownloadCygwinPackage): Check wget error status.
	(CygbuildCmdDownloadCygwinPackage): add MODE argument to
	select only binary package download.
	(CygbuildBootVariablesGlobalMain): Remove *.ps from
	`cygbuild_opt_exclude_tmp_files'.

2008-02-21  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (top level): Remove old BASH test and change
	to more reliable process substitution test.
	(CygbuildPatchApplyMaybe): Add 2nd argument MSG.
	(CygbuildCmdPrepMain): Move message 'applying included patches ...'
	to the `CygbuildPatchApplyMaybe'. Improve error code handling
	after `CygbuildPatchApplyMaybe'.
	(CygbuildMakefileRunClean): Remove unused function.
	(CygbuildCmdCleanMain): write messages only during verbose.